--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ Flask-Cors==1.8.0
 Flask-SQLAlchemy==2.0
 Jinja2==2.7.3
 MarkupSafe==0.23
+MySQL-python==1.2.5
 SQLAlchemy==0.9.7
 Werkzeug==0.9.6
 itsdangerous==0.24
+simplejson==3.6.3
 six==1.7.3
 wsgiref==0.1.2
